--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
   background: #47B5FF;
   font-family: "Helvetica", "Arial", "Bitstream Vera Sans", "Verdana", sans-serif;
+  font-size: 12px;
 }
 
 h1, h2 {
