--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,12 @@ h1, h2 {
   margin: -8px -8px 0;
 }
 
+#menu {
+  height: 30px;
+  background: #1363DF;
+  margin: 0 -8px;
+}
+
 a {
   color: #1363DF;
   text-decoration: none;
