--- a/styles.css
+++ b/styles.css
@@ -12,12 +12,7 @@ h1, h2 {
   background: #47B5FF;
   padding: 10px;
   margin: -8px -8px 0;
-}
-
-#menu {
-  height: 30px;
-  background: #1363DF;
-  margin: 0 -8px;
+  border: 20px solid #1363DF;
 }
 
 a {
