--- a/styles.css
+++ b/styles.css
@@ -38,3 +38,17 @@ footer {
   height: 100px;
   border-radius: 5px
 }
+
+#calculator button {
+  column-count: 3;
+  border: 1px solid #000;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+#results {
+  background: #FFF;
+  padding: 5px;
+  border: 1px solid #000;
+  border-radius: 5px;
+}
