--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ footer {
   border-radius: 5px;
   padding: 5px;
   background: #47B5FF;
-  margin: 5px;
+  margin: 10px;
   color: #FFF;
 }
 
@@ -56,4 +56,6 @@ footer {
   padding: 5px;
   border: 1px solid #000;
   border-radius: 5px;
+  width: 105px;
+  height: 15px;
 }
