--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,10 @@ footer {
   border-bottom: 2px solid #1363DF;
 }
 
+div.slide {
+  display: none;
+}
+
 #slideshow div.slide:first-child::before {
   content: '<';
   font-size: 200px;
