--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ footer {
 #slidshow {
   width: 30%;
   border-bottom: 2px solid #1363DF;
+  line-height: 150px;
 }
 
 div.slide {
@@ -50,10 +51,10 @@ div.slide {
 
 #slideshow div.slide:first-child::before {
   content: '<';
-  font-size: 150px;
+  font-size: 100px;
 }
 
 #slideshow div.slide:first-child::after {
   content: '>';
-  font-size: 150px;
+  font-size: 100px;
 }
