--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ footer {
   border-radius: 5px
 }
 
-#slidshow {
+#slideshow {
   width: 30%;
   border-bottom: 2px solid #1363DF;
   line-height: 150px;
