--- a/styles.css
+++ b/styles.css
@@ -43,12 +43,12 @@ footer {
   width: 30%;
   padding: 10px;
   line-height: 75px;
-  text-align: center;
+  justify-content: center;
   display: flex;
 }
 
 div.slide {
-  visibility: hidden;
+  display: none;
 }
 
 #previous {
