--- a/styles.css
+++ b/styles.css
@@ -39,26 +39,8 @@ footer {
   border-radius: 5px
 }
 
-#slideshow {
-  width: 30%;
-  padding: 10px;
-  line-height: 75px;
-  justify-content: space-evenly;
-  display: flex;
-}
-
-div.slide {
-  display: none;
-}
-
-#previous {
-  font-size: 50px;
-  float: left;
-  cursor: pointer;
-}
-
-#next {
-  font-size: 50px;
-  float: right;
-  cursor: pointer;
+div.popouts {
+  border: 1px solid #1363DF;
+  padding: 5px;
+  background: #47B5FF;
 }
