--- a/styles.css
+++ b/styles.css
@@ -47,5 +47,6 @@ div.popouts {
   position: absolute;
   border-radius: 5px;
   margin-top: 5px;
-  transition: height 2s;
+  max-height: 0;
+  transition: max-height 2s;
 }
