--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,50 @@
 body {
-  background-color: #eee;
+  background: #DFF6FF;
+  font-family: "Helvetica", "Arial", "Bitstream Vera Sans", "Verdana", sans-serif;
+  font-size: 13px;
 }
 
-.navbar {
-  margin-bottom: 0;
+h1, h2 {
+  color: #06283D;
 }
 
-.jumbotron {
+#main_header {
+  background: #47B5FF;
+  padding: 10px;
+  margin: -8px -8px 0;
+  border-bottom: 20px solid #1363DF;
+}
+
+a {
+  color: #1363DF;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #47B5FF;
+}
+
+hr {
+  border: 0;
+  border-top: 1px dashed #000;
+}
+
+footer {
   text-align: center;
 }
 
-.panel {
-  width: 80%;
-  margin: 0 auto 20px;
+#me {
+  width: 100px;
+  height: 100px;
+  border-radius: 5px
 }
 
-#copyright {
-  text-align: center;
-  padding-bottom: 10px;
+div.popouts {
+  display: none;
+  border: 1px solid #1363DF;
+  padding: 5px;
+  background: #47B5FF;
+  position: absolute;
+  border-radius: 5px;
+  margin-top: 5px;
 }
