--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,9 @@ h1, h2 {
   color: #06283D;
 }
 
-#main_header {
-  background: #47B5FF;
-  padding: 10px;
-  margin: -8px -8px 0;
-  border-bottom: 20px solid #1363DF;
+main {
+  width: 80%;
+  margin: 0 auto;
 }
 
 a {
