--- a/styles.css
+++ b/styles.css
@@ -29,12 +29,7 @@ hr {
 
 footer {
   text-align: center;
-}
-
-#me {
-  width: 100px;
-  height: 100px;
-  border-radius: 5px
+  padding-bottom: 10px;
 }
 
 div.popouts {
