--- a/styles.css
+++ b/styles.css
@@ -41,3 +41,10 @@ div.popouts {
   border-radius: 5px;
   margin-top: 5px;
 }
+
+#custom-work div.panel-body {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  text-align: center
+}
