--- a/styles.css
+++ b/styles.css
@@ -61,3 +61,16 @@ div.popouts {
 #add-to-do {
   margin: 0 auto;
 }
+
+#calculator {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #f8f8f8;
+  border: 1p solid #e7e7e7;
+  padding: 5px;
+}
+
+#calculator input {
+  width: calc(100% / 3);
+  border-radius: 50%;
+}
