--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,7 @@ div.popouts {
   background-color: #f8f8f8;
   border: 1p solid #e7e7e7;
   padding: 5px;
+  width: 40px;
 }
 
 #calculator input {
