--- a/styles.css
+++ b/styles.css
@@ -68,10 +68,10 @@ div.popouts {
   background-color: #f8f8f8;
   border: 1p solid #e7e7e7;
   padding: 5px;
-  width: 40px;
+  width: calc(13 * 4);
 }
 
 #calculator input {
   width: calc(100% / 3);
-  border-radius: 50%;
+  border-radius: 10px;
 }
