--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ div.popouts {
   display: flex;
   flex-wrap: wrap;
   background-color: #f8f8f8;
-  border: 1p solid #e7e7e7;
+  border: 1px solid #e7e7e7;
   padding: 5px;
   width: calc(13 * 4);
 }
