--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ div.popouts {
   background-color: #f8f8f8;
   border: 1px solid #e7e7e7;
   padding: 5px;
-  width: calc(13 * 4);
+  width: 30%;
 }
 
 #calculator input {
