--- a/styles.css
+++ b/styles.css
@@ -68,10 +68,11 @@ div.popouts {
   background-color: #f8f8f8;
   border: 1px solid #e7e7e7;
   padding: 5px;
-  width: 30%;
+  width: 50%;
 }
 
 #calculator input {
   width: calc(100% / 4);
   border-radius: 10px;
+  margin: 3px;
 }
