--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ div.popouts {
 }
 
 #calculator input {
-  width: calc(100% / 4);
+  width: calc(100% / 4 - 15);
   border-radius: 10px;
   margin: 3px;
 }
