--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,7 @@ div.popouts {
 #calculator {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   background-color: #f8f8f8;
   border: 1px solid #e7e7e7;
   padding: 5px;
