--- a/styles.css
+++ b/styles.css
@@ -78,3 +78,11 @@ div.popouts {
   border-radius: 10px;
   margin: 3px;
 }
+
+#calculator input[name="results"] {
+  width: 100%;
+  border-radius: 10px;
+  margin: 3px auto;
+  background-color: #337ab7;
+  border: 1px solid #337ab7;
+}
