--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,7 @@ div.popouts {
   width: 100%;
   border-radius: 10px;
   margin: 3px auto;
+  padding: 5px;
   background-color: #337ab7;
   border: 1px solid #337ab7;
 }
