--- a/styles.css
+++ b/styles.css
@@ -86,4 +86,6 @@ div.popouts {
   padding: 5px;
   background-color: #337ab7;
   border: 1px solid #337ab7;
+  color: #FFF;
+  text-align: right;
 }
